--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,6 @@ layout: none
     ],
     "theme_color": "{{ site.color }}",
     "background_color": "{{ site.color }}",
-    "start_url": "https://chowdown.io",
+    "start_url": "https://vsetlur.github.io/octocookbook/",
     "display": "standalone"
 }
